--- a/admin/certchain/templates/certchain/viewer.html
+++ b/admin/certchain/templates/certchain/viewer.html
@@ -20,9 +20,9 @@
         {% if document_override %}
         <span id="label-line1">INVALID</span>
         {% else %}
-        <span id="label-line1">{{ doc | cc_extract_recipient }}</span>
-        <span id="label-line2">{{ doc | cc_extract_degree }}</span>
-        <span id="label-line3">Conferred on {{ doc | cc_extract_conferral_date }}</span>
+        <span id="label-line1">{{ doc.recipient }}</span>
+        <span id="label-line2">{{ doc.degree }}</span>
+        <span id="label-line3">Conferred on {{ doc.conferral_date }}</span>
         {% endif %}
       </div>
     </div>
