--- a/admin/certchain/templates/certchain/certifications.html
+++ b/admin/certchain/templates/certchain/certifications.html
@@ -39,7 +39,7 @@
               <input class="cc-btn" type="submit" value="REVOKE"/>
             </form>
           </td>
-          <td><a class="cc-btn" href="{% url 'viewer' c %}">VIEW DIPLOMA</a></td>
+          <td><a class="cc-btn" href="{% url 'viewer' c %}">VIEW</a></td>
         </tr>
         {% empty %}
         <tr>
