Peering relationships can now be ended via the UI.

--- a/admin/certchain/static/certchain/css/overview.css
+++ b/admin/certchain/static/certchain/css/overview.css
@@ -36,11 +36,11 @@
   text-align: center;
 }
 
-.netnode-states .start-peering-form {
+.netnode-states .peering-form {
   margin: 0 !important;
 }
 
-.netnode-states .start-peering-form .cc-btn {
+.netnode-states .peering-form .cc-btn {
   font-size: 15px;
 }
 
