--- a/admin/public/templates/public/student.html
+++ b/admin/public/templates/public/student.html
@@ -17,24 +17,39 @@
     </div>
   </div>
 
+  {% for c in certifications %}
   <div class="row student-doc">
-    <div class="span4">
-      <span>Diploma</span>
-      <span>Certified May 5, 2015</span>
-      <span>Revoked Jan 1, 2016</span>
-    </div>
-    <div class="span5">
-      <span>a23423aafs</span>
-    </div>
-    <div class="span3">
-      <span class="cc-btn">VIEW</span>
+    <div class="span12">
+      <table>
+        <tr>
+          <td>
+            <span class="type">{{ c.Certify.1 }}</span>
+            <span>Certified __________</span>
+            <span>Revoked __________</span>
+          </td>
+          <td>
+            <span class="id"><a href="{% url 'public:document' c.Certify.0 %}">{{ c.Certify.0 }}</a></span>
+          </td>
+          <td>
+            <a class="cc-btn" href="{% url 'public:document' c.Certify.0 %}">OPEN</a>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
+  {% empty %}
+  <div class="row student-doc">
+    <div class="span12">
+      This student has not been issued any diplomas.
+    </div>
+  </div>
+  {% endfor %}
 
+  <br/>
   <div class="row">
     <div class="span12">
       <h2>Transcripts</h2>
-      <p>The student with ID {{ student_id }} has received the diplomas listed below.</p>
+      <p>The student with ID {{ student_id }} has received the transcripts listed below.</p>
     </div>
   </div>
 </div>
