Now able to reconstruct InstAddresses client-side, from recoverable signatures.

--- a/admin/public/templates/public/document.html
+++ b/admin/public/templates/public/document.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="{% static 'public/js/cryptojs.js'%}"></script>
     <script type="text/javascript" src="{% static 'public/js/wordarrayconv.js'%}"></script>
     <script type="text/javascript" src="{% static 'public/js/sjcl.js'%}"></script>
+    <script type="text/javascript" src="{% static 'public/js/bs58.js'%}"></script>
     <script type="text/javascript" src="{% static 'public/js/verify.js'%}"></script>
   </head>
   <body>
