--- a/admin/public/templates/public/document.html
+++ b/admin/public/templates/public/document.html
@@ -23,10 +23,11 @@
           <td>
             <span id="cert-status">Verifying document authenticity...</span>
             <ul>
-              <li>Was block published within the last hour?</li>
+              <li>Was this block published within the last hour?</li>
               <li id="author-sig-valid">Is the block header signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
               <li id="peer-hash-valid">Are there one or more peers identified as signatories in the block header? <span class="yes">YES</span><span class="no">NO</span></li>
-              <li>Is the block header signed by all listed peers?</li>
+              <li id="all-peers-signed">Is the block header signed by all peer signatories? <span class="yes">YES</span><span class="no">NO</span></li>
+              <li id="all-peers-signed">Does the provided Merkle inclusion proof resolve to the signed root? <span class="yes">YES</span><span class="no">NO</span></li>
             </ul>
           </td>
           <td>
