--- a/admin/certchain/static/certchain/css/viewer.css
+++ b/admin/certchain/static/certchain/css/viewer.css
@@ -91,6 +91,11 @@ body {
   border: 1px solid #D6DE6C;
 }
 
+#verify-area.gray {
+  background-color: #E1E1E1;
+  border: 1px solid #5A5A5A;
+}
+
 #verify-area #progress {
   height: 18px;
   float: right;
