--- a/admin/public/templates/public/document.html
+++ b/admin/public/templates/public/document.html
@@ -18,23 +18,25 @@
   <body>
     <div id="raw-data" style="display: none">{{ raw_data }}</div>
     <div id="document">
-      <table id="verify-area" class="gray">
-        <tr>
-          <td>
-            <span id="cert-status">Verifying document authenticity...</span>
-            <ul>
-              <li id="author-sig-valid">Is the block header signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
-              <li id="peer-hash-valid">Are there one or more peers identified as signatories in the block header? <span class="yes">YES</span><span class="no">NO</span></li>
-              <li id="all-peers-signed">Is the block header signed by all peers identified in the header? <span class="yes">YES</span><span class="no">NO</span></li>
-              <li id="merkle-proof-valid">Does the provided Merkle inclusion proof resolve to the signed root? <span class="yes">YES</span><span class="no">NO</span></li>
-              <li>Was this block published within the last hour? <span class="yes">YES</span><span class="no">NO</span></li>
-            </ul>
-          </td>
-          <td>
-            <img id="progress" src="{% static 'public/images/progress_bar.gif'%}"/>
-          </td>
-        </tr>
-      </table>
+      <div id="verify-area" class="gray">
+        <div id="valid-text">
+          <p id="cert-line">Certified by <span class="block-author-hostname"></span> on <span id="cert-date"></span> in <a href="">this block</a>.</p>
+          <p id="peer-line">Latest confirmation authored <span id="ago"></span> by <strong><span class="block-author-hostname"></span></strong> with <span id="peer-list"></span>.</p>
+          <p id="raw-data-line">All authenticity checks were performed in your browser on <a href="">the raw data located here</a>. To view the checklist, tap this box.</p>
+        </div>
+        <div id="invalid-text">
+          <p id="cert-line">Invalid.</p>
+        </div>
+        <span id="progress-status">Verifying document authenticity...</span>
+        <ul id="checklist">
+          <li id="author-sig-valid">Is the block header signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
+          <li id="peer-hash-valid">Are there one or more peers identified as signatories in the block header? <span class="yes">YES</span><span class="no">NO</span></li>
+          <li id="all-peers-signed">Is the block header signed by all peers identified in the header? <span class="yes">YES</span><span class="no">NO</span></li>
+          <li id="node-locs-agreed">Are author and peers in agreement about each other's address, hostname, and port? <span class="yes">YES</span><span class="no">NO</span></li>
+          <li id="merkle-proof-valid">Does the provided Merkle inclusion proof tie this document to the signed root? <span class="yes">YES</span><span class="no">NO</span></li>
+          <li id="within-last-hour">Was this block published within the last hour? <span class="yes">YES</span><span class="no">NO</span></li>
+        </ul>
+      </div>
       <div id="document-body">
         {% if document_override %}
         <span id="label-line1">INVALID</span>
