--- a/admin/public/templates/public/document.html
+++ b/admin/public/templates/public/document.html
@@ -16,27 +16,42 @@
     <script type="text/javascript" src="{% static 'public/js/verify.js'%}"></script>
   </head>
   <body>
-    <div id="raw-data" style="display: none">{{ raw_data }}</div>
-    <div id="document">
-      <div id="verify-area" class="gray">
-        <div id="valid-text">
+    <table id="verify-area" class="gray">
+      <tr id="valid-text">
+        <td>
           <p id="cert-line">Certified by <span class="block-author-hostname"></span> on <span id="cert-date"></span> in <a href="">this block</a>.</p>
           <p id="peer-line">Latest confirmation authored <span id="ago"></span> by <strong><span class="block-author-hostname"></span></strong> with <span id="peer-list"></span>.</p>
           <p id="raw-data-line">All authenticity checks were performed in your browser on <a href="">the raw data located here</a>. To view the checklist, tap this box.</p>
-        </div>
-        <div id="invalid-text">
+        </td>
+        <td id="verify-toggle">
+          <img id="hide-details" src="{% static 'public/images/arrow_up.png' %}"/>
+          <img id="show-details" src="{% static 'public/images/arrow_down.png' %}"
+        </td>
+      </tr>
+      <tr id="invalid-text">
+        <td>
           <p id="cert-line">Invalid.</p>
-        </div>
-        <span id="progress-status">Verifying document authenticity...</span>
-        <ul id="checklist">
-          <li id="author-sig-valid">Is the block header signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
-          <li id="peer-hash-valid">Are there one or more peers identified as signatories in the block header? <span class="yes">YES</span><span class="no">NO</span></li>
-          <li id="all-peers-signed">Is the block header signed by all peers identified in the header? <span class="yes">YES</span><span class="no">NO</span></li>
-          <li id="node-locs-agreed">Are author and peers in agreement about each other's address, hostname, and port? <span class="yes">YES</span><span class="no">NO</span></li>
-          <li id="merkle-proof-valid">Does the provided Merkle inclusion proof tie this document to the signed root? <span class="yes">YES</span><span class="no">NO</span></li>
-          <li id="within-last-hour">Was this block published within the last hour? <span class="yes">YES</span><span class="no">NO</span></li>
-        </ul>
-      </div>
+        </td>
+      </tr>
+      <tr id="progress-status">
+        <td>Verifying the authenticity and status of this document...</td>
+      </tr>
+      <tr id="checklist">
+        <td>
+          <ul>
+            <li id="author-sig-valid">Is the block header signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
+            <li id="peer-hash-valid">Are there one or more peers identified as signatories in the block header? <span class="yes">YES</span><span class="no">NO</span></li>
+            <li id="all-peers-signed">Is the block header signed by all peers identified in the header? <span class="yes">YES</span><span class="no">NO</span></li>
+            <li id="node-locs-agreed">Are author and peers in agreement about each other's address, hostname, and port? <span class="yes">YES</span><span class="no">NO</span></li>
+            <li id="merkle-proof-valid">Does the provided Merkle inclusion proof tie this document to the signed root? <span class="yes">YES</span><span class="no">NO</span></li>
+            <li id="within-last-hour">Was this block published within the last hour? <span class="yes">YES</span><span class="no">NO</span></li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <div id="raw-data" style="display: none">{{ raw_data }}</div>
+    <div id="document">
+      <img id="doc-bg" src="{% static 'certchain/images/diploma_bg.png' %}"/>
       <div id="document-body">
         {% if document_override %}
         <span id="label-line1">INVALID</span>
