--- a/admin/public/templates/public/document.html
+++ b/admin/public/templates/public/document.html
@@ -40,7 +40,7 @@
         <td>
           <ul>
             <li id="document-hash-valid">Does the committed document hash to the expected and received hash values? <span class="yes">YES</span></li> 
-            <li id="author-sig-valid">Is the block header signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
+            <li id="author-sig-valid">Is the header of the latest block signed by the authoring institution? <span class="yes">YES</span><span class="no">NO</span></li>
             <li id="peer-hash-valid">Are there one or more peers identified as signatories in the block header? <span class="yes">YES</span><span class="no">NO</span></li>
             <li id="all-peers-signed">Is the block header signed by all peers identified in the header? <span class="yes">YES</span><span class="no">NO</span></li>
             <li id="node-locs-agreed">Are author and peers in agreement about each other's address, hostname, and port? <span class="yes">YES</span><span class="no">NO</span></li>
